--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react",
-  ],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-object-rest-spread"
+    "@babel/plugin-proposal-object-rest-spread",
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
   ]
 }
