--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
+    "prettier": "^1.17.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
