--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,16 @@
 {
-    "extends": ["standard", "standard-react"]
+    "extends": ["standard", "standard-react"],
+    "parser": "babel-eslint",
+    "env": {
+      "jest": true
+    },
+    "rules": {
+      "jsx-quotes": ["error", "prefer-double"],
+      "semi": ["error", "never"],
+      "space-before-function-paren": ["error", {
+        "anonymous": "never",
+        "named": "never",
+        "asyncArrow": "always"
+    }]
+    }
 }
