--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "eslint": "^5.13.0",
     "eslint-config-standard": "^12.0.0",
