--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "lint": "eslint src",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest",
+    "build:lib": "babel src --out-dir lib --ignore \"src/**/test.js\""
   },
   "author": "Guilherme Louro (http://github.com/guilouro)",
   "license": "MIT",
@@ -34,10 +35,12 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "prettier": "^1.17.0",
     "react-testing-library": "^7.0.0",
+    "styled-components": "^4.2.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
