--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "prettier": "^1.17.0",
+    "prismjs": "^1.16.0",
     "react-testing-library": "^7.0.0",
     "styled-components": "^4.2.0",
     "webpack": "^4.29.3",
