--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server",
     "lint": "eslint src",
     "test": "NODE_ENV=test jest",
-    "build:lib": "babel src --out-dir lib --ignore \"src/**/test.js\""
+    "build:lib": "babel src --out-dir lib --ignore \"src/**/test.js\"",
+    "prepush": "npm run lint && npm t"
   },
   "author": "Guilherme Louro (http://github.com/guilouro)",
   "license": "MIT",
@@ -38,6 +39,7 @@
     "faker": "^4.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^2.2.0",
     "jest": "^24.1.0",
     "prettier": "^1.17.0",
     "prismjs": "^1.16.0",
