--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "formcat",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A simple and easy way to control forms in React using the React Context API",
+  "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
     "lint": "eslint src",
@@ -9,7 +10,7 @@
     "ci": "npm run lint && npm t",
     "build:lib": "rm -rf ./lib/* && babel src -d lib --ignore \"src/**/test.js\" && cp ./package.json lib",
     "prepare": "pushd . && npm run ci && npm run build:lib && cd lib",
-    "postpublish": "popd && git clean -fd"
+    "postpublish": "popd && rm -rf lib"
   },
   "author": "Guilherme Louro (http://github.com/guilouro)",
   "license": "MIT",
