--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formcat",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A simple and easy way to control forms in React using the React Context API",
   "main": "index.js",
   "scripts": {
@@ -9,8 +9,9 @@
     "test": "NODE_ENV=test jest",
     "ci": "npm run lint && npm t",
     "build:lib": "rm -rf ./lib/* && babel src -d lib --ignore \"src/**/test.js\" && cp ./package.json lib",
-    "prepare": "pushd . && npm run ci && npm run build:lib && cd lib",
-    "postpublish": "popd && rm -rf lib"
+    "prepare": "[[ \"$PWD\" =~ lib ]]",
+    "pub": "pushd . && npm run ci && npm run build:lib && cd lib && npm publish && popd",
+    "postpublish": "rm -rf lib"
   },
   "author": "Guilherme Louro (http://github.com/guilouro)",
   "license": "MIT",
