--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server",
     "lint": "eslint src",
     "test": "NODE_ENV=test jest",
+    "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls",
     "ci": "npm run lint && npm t",
     "build:lib": "babel src -d lib --ignore \"src/**/test.js\"",
     "copy:lib": "cp package.json README.md lib",
@@ -36,6 +37,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "coveralls": "^3.0.3",
     "eslint": "^5.13.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
