--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: node_js
 node_js:
-- 11
-- 10
-- 8
+  - 11
+  - 10
+  - 8
 cache:
   directories:
-  - node_modules
+    - node_modules
+install:
+  - npm install
+  - npm i -g codecov
 script:
-- npm run lint
+  - npm run ci
 after_script:
-- npm run test
+  - codecov
