--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:lib": "babel src -d lib --ignore \"src/**/test.js\"",
     "copy:lib": "cp package.json README.md lib",
     "clear:lib": "rm -rf lib",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json)\"",
     "pub": "pushd ./ && npm run ci && npm run build:lib && npm run copy:lib && cd lib && npm publish && popd && npm run clear:lib"
   },
   "author": "Guilherme Louro (http://github.com/guilouro)",
@@ -34,25 +35,26 @@
     "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@testing-library/react": "^10.0.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-react": "^9.2.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^4.1.0",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^2.7.0",
-    "jest": "^24.9.0",
-    "prettier": "^1.19.1",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "prettier": "^2.0.5",
     "prismjs": "^1.20.0",
-    "react-testing-library": "^7.0.1",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
