--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,9 @@ jobs:
           node-version: 10.x
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Install packages
+        run: npm install
+
       - name: Publish
         run: npm run pub
         env:
