--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formcat",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "A simple and easy way to control forms in React using the React Context API",
   "main": "index.js",
   "scripts": {
@@ -55,6 +55,8 @@
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "prismjs": "^1.20.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "styled-components": "^5.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
@@ -63,13 +65,11 @@
   "dependencies": {
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "prop-types": "^15.7.2"
   },
   "peerDependencies": {
-    "react": "^16.8.x",
-    "react-dom": "^16.8.x"
+    "react": ">= 16.8.0 < 17",
+    "react-dom": ">= 16.8.0 < 17"
   },
   "husky": {
     "hooks": {
